comment out fake numbers, fix alignments

--- a/src/pages/Programs/Programs.css
+++ b/src/pages/Programs/Programs.css
@@ -43,6 +43,7 @@
 
 .programsHeader p {
 	font-size: calc(1px + 1.2vw);
+	width: 50vw;
 }
 
 .contactUsBoxContainer {
